deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rejekts-server
  labels:
    app: rejekts-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: rejekts-server
  template:
    metadata:
      labels:
        app: rejekts-server
    spec:
      containers:
      - name: rejekts-server
        image: 125843596666.dkr.ecr.us-west-2.amazonaws.com/rejekts/httpsig-server:latest
        args:
        - --authority
        - rejekts.dev.micahhausler.com
        - --scheme
        - https
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 1
            memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: rejekts-server
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: rejekts-server
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rejekts-server
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": {"Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    external-dns.alpha.kubernetes.io/hostname: rejekts.dev.micahhausler.com
spec:
  ingressClassName: alb
  rules:
  - host: rejekts.dev.micahhausler.com
    http:
      paths:
      - path: /*
        pathType: ImplementationSpecific
        backend:
          service:
            name: rejekts-server
            port:
              number: 80
